--- a/_posts/2018-02-20-hello-2018.markdown
+++ b/_posts/2018-02-20-hello-2018.markdown
@@ -1,7 +1,7 @@
 ---
 layout:       post
 title:        "你好，2018"
-subtitle:     "Hello,2018"
+subtitle:     "自留地垦荒成功，终于有个地方可以好好写点东西了"
 date:         2018-02-20 23:07:00
 author:       "LiuTong"
 header-img:   "img/in-post/post-bg-hello-2018.jpg"
@@ -19,6 +19,8 @@ tags:
 > <br/>
 >                        ------ 《 红猪 》
 
-我也不知道怎么回事，前端知识基本为零的我，在 2018 年的寒假，竟然阴差阳错的搭建了个人博客网站，当然这不是偶然，因为我的好奇，就了解了 Markdown；因为了解了 Markdown，就为了建立一个良好的写作环境而配置了一个 Sublime Text 下的编辑环境；环境建好了，就为了发布博客而找不到一个好的平台而愁绪漫天飞；因为想找一个好的博客平台，就了解了 Github 的 Pages；因为想要搭建一个好的博客页面，就搜到了 Hux 的模板。我这也算是，站在巨人的肩膀上了，在此我要感谢 Hux 黄玄先生，你的模板让我这个小白的博客变得有声有色。
+我也不知道怎么回事，前端知识基本为零的我，在 2018 年的寒假，竟然阴差阳错的搭建了个人博客网站，当然这不是偶然，因为我的好奇，就了解了 Markdown；因为了解了 Markdown，就为了建立一个良好的写作环境而配置了一个 Sublime Text 下的编辑环境；环境建好了，就为了发布博客而找不到一个好的平台而愁绪漫天飞；因为想找一个好的博客平台，就了解了 Github 的 Pages；因为想要搭建一个好的博客页面，就搜到了 Hux 的模板。我是站在巨人的肩膀上搭建了这个个人网站，在此我要感谢 Hux 黄玄先生，你的模板让我这个小白的博客变得有声有色。
 
-我的博客会不定期的记录一些东西，主要是生活随笔、技术文档之类，因为 Markdown 让我不再为像写 LaTeX 那样为纠结排版而发愁。我只想在自己的这片自留地中记录一些属于自己的东西，当然，好的东西我愿意拿出来分享给大家。
+说实话，搭建这个站其实并不容易，但也不是像新学一门语言似的那么困难，自己折腾了两三天，还好总算弄出来了，把原作者的模板删了又改，改了又删，来来回回把自己搞的也很崩溃，好在没有放弃。于是我将这个建站的整个过程写成了一篇技术文档，放在了我的博客里，如果有像我一样想要搭建个人博客的同学们可以看看我的前车之鉴，可以快速而准确的开始搭建自己的博客之路。
+
+我的博客会不定期的记录一些东西，主要是生活随笔、技术文档之类，因为 Markdown 让我不再像写 LaTeX 那样为纠结排版而发愁。我只想在自己的这片自留地中记录一些属于自己的东西，当然，好的东西我愿意拿出来分享给大家，爱你们。
