fix some points

--- a/_posts/2018-07-11-latex-note-1.markdown
+++ b/_posts/2018-07-11-latex-note-1.markdown
@@ -1,6 +1,6 @@
 ---
 layout:       post
-title:        "LaTeX笔记--01"
+title:        "LaTeX 随笔漫谈 -- LaTeX 下的中文支持总结"
 subtitle:     "LaTeX中文环境排版方式总结"
 date:         2018-07-11 19:40:00
 author:       "LiuTong"
