--- a/_posts/2018-02-20-hello-2018.markdown
+++ b/_posts/2018-02-20-hello-2018.markdown
@@ -7,7 +7,7 @@ author:       "LiuTong"
 header-img:   "img/in-post/post-bg-hello-2018.jpg"
 header-mask:  0.3
 catalog:      true
-multilingual: true
+multilingual: false
 tags:
     - 生活
     - 随笔
