--- a/_posts/2018-02-20-hello-2018.markdown
+++ b/_posts/2018-02-20-hello-2018.markdown
@@ -6,7 +6,7 @@ date:         2018-02-20 23:07:00
 author:       "LiuTong"
 header-img:   "img/in-post/post-bg-hello-2018.jpg"
 header-mask:  0.3
-catalog:      true
+catalog:      false
 multilingual: false
 tags:
     - 生活
