--- a/_posts/2018-02-20-hello-2018.markdown
+++ b/_posts/2018-02-20-hello-2018.markdown
@@ -1,7 +1,7 @@
 ---
 layout:       post
 title:        "你好，2018"
-subtitle:     "自留地垦荒成功，终于有个地方可以好好写点东西了"
+subtitle:     "尝试并且坚持，克服困难后就会看到你想要的"
 date:         2018-02-20 23:07:00
 author:       "LiuTong"
 header-img:   "img/in-post/post-bg-hello-2018.jpg"
@@ -19,8 +19,10 @@ tags:
 > <br/>
 >                        ------ 《 红猪 》
 
-我也不知道怎么回事，前端知识基本为零的我，在 2018 年的寒假，竟然阴差阳错的搭建了个人博客网站，当然这不是偶然，因为我的好奇，就了解了 Markdown；因为了解了 Markdown，就为了建立一个良好的写作环境而配置了一个 Sublime Text 下的编辑环境；环境建好了，就为了发布博客而找不到一个好的平台而愁绪漫天飞；因为想找一个好的博客平台，就了解了 Github 的 Pages；因为想要搭建一个好的博客页面，就搜到了 Hux 的模板。我是站在巨人的肩膀上搭建了这个个人网站，在此我要感谢 Hux 黄玄先生，你的模板让我这个小白的博客变得有声有色。
+2018年2月20日，开通个人博客。其实一开始并没有搭建博客的念头，然而世界就是如此奇妙，当你去探究一个问题的答案，你就会发现另一个问题，然后你就去寻找这个问题的答案，于是又发现一堆问题，它们就像一根埋在地下的绳子，当你努力拉出一段，又会想去拉出另一段，最终你会发现一个奇妙的世界，回头看，你会发现自己完成了一件曾经根本没有想过的事情。
 
-说实话，搭建这个站其实并不容易，但也不是像新学一门语言似的那么困难，自己折腾了两三天，还好总算弄出来了，把原作者的模板删了又改，改了又删，来来回回把自己搞的也很崩溃，好在没有放弃。于是我将这个建站的整个过程写成了一篇技术文档，放在了我的博客里，如果有像我一样想要搭建个人博客的同学们可以看看我的前车之鉴，可以快速而准确的开始搭建自己的博客之路。
+搭建博客的源头在于我想学习Markdown，之后为了搭建一个良好的写作环境而配置了一个Sublime Text下的编辑环境，随之为了发布博客而搜寻各种平台，新浪博客已是将死之物，单丑陋不说，更是广告满天飞，CSDN这种更不必说，于是我问自己，为什么不自己搭建一个呢？当然我了解自己在前端技术上没什么基础，但是我就是想尝试，几番搜索后，我锁定了以Github的Pages为平台，随之就是找模板，修改模板，域名解析等等一系列操作，说难不难，但初次尝试终归很生疏，好在坚持住没放弃，才能最终搞定。
 
-我的博客会不定期的记录一些东西，主要是生活随笔、技术文档之类，因为 Markdown 让我不再像写 LaTeX 那样为纠结排版而发愁。我只想在自己的这片自留地中记录一些属于自己的东西，当然，好的东西我愿意拿出来分享给大家，爱你们。
+说实话，搭建这个站其实并不容易，但也不像新学一门语言那样困难，折腾了两三天，把原作者的模板删了又改，改了又删，来来回回有时也很崩溃。于是我将建站的整个过程写成了一篇文档，总结下来作为笔记，放在了我的博客里，给自己留作一个经验。
+
+就像个日记本吧，生活很美好，经验很宝贵，希望我的键盘能让时光留下点什么。
