--- a/_posts/2020-01-21-freedom.markdown
+++ b/_posts/2020-01-21-freedom.markdown
@@ -6,7 +6,7 @@ date:         2020-01-21 23:24:00
 author:       "LiuTong"
 header-img:   "img/post-bg-2015.jpg"
 header-mask:  0.3
-catalog:      true
+catalog:      false
 tags:
     - 生活
     - 随笔
@@ -14,3 +14,10 @@ tags:
 
 菜刀“哐、哐”地落在案板上，母亲又在厨房里忙碌开了，是的，她是一个闲不住的人，强势是她的代名词，接近年关，母亲又要为全家人准备过年的食物，用她自己的话说，叫做“全家人就累我自己，你们全等着吃”，整日的为家人操劳，母亲实属不易。然而现在的我并非想体恤和理解母亲这种艰辛，我现在满脑子想的只有一件事，那就是“离开她，摆脱她的控制”。
 
+前两天又和母亲进行了一次促膝长谈，因为她最近经常性的崩溃，总是唉声叹气，愁眉苦练，怨气冲天，其实我深深地能理解到，母亲目前的这种状态，有她身体不好、上班操劳的原因，但其实更重要的，是她对父亲的懦弱无能而又无力改变的愤怒，对目前的生活状况较为窘迫的无奈，也是对未来生活没有希望的失望，与身边其他人比较出来的卑微，凡此种种情绪，都化成了怨，渐渐让她变为一个消极的怨妇，不愿意活在当下，反而更愿意活在会议中。
+
+在我的印象中，母亲并不是这样的人，母亲歌唱得好，嗓音明快，具有专业水准，如果当初能好好培养，也有可能成为那种高水平的歌唱家。小时候，母亲并没有现在这样强势，她慈祥温柔，基本很少打骂我，由于父亲在外面工作经常不在家，母亲很坚强很能干，家中大大小小的活她都能够撑起。母亲这种过于强势性格的养成并非是一天两天的，自从父亲放弃了在外面的工作回家和母亲合伙开饭馆做生意后，夫妻二人的矛盾逐渐显现的愈发明显，经常性的吵闹也让父亲的自信心有了很大程度的贬损，在之后家中老人瘫痪，父亲因为固执不懂得变通的愚孝而全然放弃了他应当承担的另一份责任——为妻儿谋生活，丢弃工作好多年在家中照顾老人，多年没有收入导致家中状况窘迫，一个正值壮年的男人如果没有收入将是一件多么可悲的事情，我固然无奈但也不能苛责父亲，因为我还在上学，还未独立，还需要吸家中的血，所以我没有这个权利。母亲因为父亲经常性的没有收入而渐渐失望，她一边支持着父亲的愚孝，一边又无时不刻不在贬损他，夫妻二人的矛盾越来越加剧，没有收入的男人是自卑的，母亲的怨气愈发严重，潜移默化的都发泄在父亲身上，父亲从年青时的意气风发逐渐变得卑微懦弱，到现在破罐子破摔，已经基本失了奋斗的意志。现在的家中更像是一种畸形的关系，真的有些类似于《都挺好》中苏大强和苏母，不过母亲并没有苏母那样夸张，在外人面前她还是竭力在维护父亲的形象，保全家庭的面子。
+
+我成长于这样的家庭中，不用想这肯定造就了我自卑、自尊心强的性格，好在我努力追求上进，在学校中也取得了不错的成绩。在大学这几年，我从大一大二那个只知道死学习的书呆子土小子，成长到大三大四开始思考自己的未来，那个时候就像出国，因为成绩一直拔尖，出国的机会可以说是手拿把攥，然而最大的羁绊就是钱，家庭根本无法支撑我出国的这个费用，每当与父母谈起这个话题，父亲总是无能地啥也说不出，母亲就会面如死灰地哭鼻子，然后说自己无能，闹上一个小时后开始劝我好好想一想，不要做这么冲动的决定。其实我从未指望过他们在经济上给我支持，因为我知道他们没钱，我只是希望他们能够开心而激动的支持我的这个决定，并心平气和的说明家里的情况，我不可能逼迫他们拿出这么多钱供我出国，然而我每次看到他们那样子，心中除了失望还有很强烈的厌恶，所以后来我再也没有和他们提起出国的这个想法。为了出国，我做了许多努力，我拼命学习拿第一，到了研二，奖学金一共积攒了有6万元，可以支持我去国外做半年的实习工作，然而，我却作出了目前为止非常错误的一个决定，那就是把这笔积蓄交由我妈保管。我父母从来就没有过良好的理财意识和理财习惯，奋斗了这么多年，基本上没有什么长远目标和规划，到现在连一套房子也没攒下。然而我母亲给我灌输的一套思想就是结婚之前我的所有钱财都是必须交由她来保管的，名曰怕我管不住钱。如果再往更深层次剖析，其实更是想通过经济上的约束来控制我，长期影响我的决策，然而每当我看到父母活的这么失败，我内心忍不住就要问自己：母亲的话真的对吗？
+
+小时候，母亲的话对我来说简直就是指路明灯。
