--- a/_posts/2020-01-21-freedom.markdown
+++ b/_posts/2020-01-21-freedom.markdown
@@ -22,4 +22,7 @@ tags:
 
 小时候，母亲的话对我来说简直就是指路明灯。我承认，母亲在我人生中给到了我良好的方向指引，没有让我走弯路。然而，长大后再想想，其实父母和原生家庭给了我太多的羁绊和束缚，那些美其名曰“为了你好”的话，其实才是我人生道路上最大的羁绊。每个人是要为自己而活的，我的母亲就完全活错了，她把一生活着的希望都寄托在别人身上，从未为自己而活过，正因为这样，她才可以利用这种牵连而对别人进行道德绑架，尤其是我，这种道德绑架和情感上的绑架让我尤其困惑，我绝非一个不孝顺的人，然而母亲总是利用这种情感联系制造一种我的“愧疚感”，用这种愧疚感来绑架我，让我觉得如果不听她的话我就是一个混蛋，一个完完全全的失败品。她也是这么做的，每当我与她在谈话中有什么意见分歧或者不听从她意志的表现，她就会用诸如“断绝关系”、“我死了算了”、“你以后不要管我”、“你太不孝了”这种语言来讽刺打击我，让我觉得我好想真的就是这么一种人。
 
-我曾怨恨过父母的无能，深深厌恶自己生在这样的一个家庭中，既不能从物质上给我想要的，也不能从精神上给我一个温馨和睦、温暖正常的家庭氛围。
+我曾怨恨过父母的无能，深深厌恶自己生在这样的一个家庭中，既不能从物质上给我想要的，也不能从精神上给我一个温馨和睦、温暖正常的家庭氛围。然而每个人都可以选择很多东西，唯独自己的家庭出身是不能选择的，在这一点上，我已深深从内心与父母达成了和解，坦然接受现在的一切，能拼爹的那拼爹，没爹可拼的不拼自己还能拼什么呢。我只是希望父母能够给我一种生活下去的安全感和自信，然而没有，母亲愈发的只会一昧的哭穷。
+
+2019年，我成长了许多
+
