--- a/_posts/2020-01-21-freedom.markdown
+++ b/_posts/2020-01-21-freedom.markdown
@@ -24,5 +24,5 @@ tags:
 
 我曾怨恨过父母的无能，深深厌恶自己生在这样的一个家庭中，既不能从物质上给我想要的，也不能从精神上给我一个温馨和睦、温暖正常的家庭氛围。然而每个人都可以选择很多东西，唯独自己的家庭出身是不能选择的，在这一点上，我已深深从内心与父母达成了和解，坦然接受现在的一切，能拼爹的那拼爹，没爹可拼的不拼自己还能拼什么呢。我只是希望父母能够给我一种生活下去的安全感和自信，然而没有，母亲愈发的只会一昧的哭穷。
 
-2019年，我成长了许多
+2019年，我成长了许多，只有不断去经历，不断去学习才能意识到自己原来的环境、原来的思维是多么的局限，才能意识到活着的意义，真正的生活应该是什么样子。是的，我想说我希望跳出这个家，并非是离得越远越好，而是为自己而活，做到人格独立和经济独立，真正的独立必然带来与父母的对立、矛盾的激化，然而这是每个人的独立之路必须要迈出的一步，只有离开他们，我才能活得更好，才能活得更加精彩。
 
